[gd_scene load_steps=5 format=3 uid="uid://cjo1pntyxrktv"]

[ext_resource type="StyleBox" uid="uid://cexlqsnfwo8t5" path="res://debrisTrack_v1/Panel Theme/ThemeDebrisHUD.tres" id="1_8a8tn"]
[ext_resource type="Script" path="res://debrisTrack_v1/Scripts/object_hud.gd" id="1_jtcnm"]
[ext_resource type="Texture2D" uid="uid://rpvlbbk8djxl" path="res://debrisTrack_v1/HUD/GrapicsIcon/station_C.png" id="2_jgehp"]
[ext_resource type="Texture2D" uid="uid://ckrvrn2cwkh00" path="res://debrisTrack_v1/HUD/HUD Icon/trashcanOpen.png" id="4_ognaf"]

[node name="Object_HUD" type="Control"]
custom_minimum_size = Vector2(350, 100)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_jtcnm")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator" type="VSeparator" parent="BoxContainer"]
visible = false
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.03

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PrincipalContainer" type="Panel" parent="BoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_8a8tn")

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/HBoxContainer/PrincipalContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VSeparator2" type="VSeparator" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="IconContainer" type="HBoxContainer" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Icon" type="TextureRect" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/IconContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_jgehp")
stretch_mode = 5

[node name="ElementContainer" type="VBoxContainer" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer"]
clip_children = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Nombre" type="Label" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 14
text = "Aqui se 
mostrara 
el nombre"
vertical_alignment = 1

[node name="Posicion" type="Label" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_font_sizes/font_size = 14
text = "Aqui se mostrara el nombre"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Eliminar" type="Button" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer"]
layout_mode = 2
text = "Eliminar"
icon = ExtResource("4_ognaf")
icon_alignment = 2
expand_icon = true

[node name="HSeparator" type="HSeparator" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer"]
clip_children = 1
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="VSeparator" type="VSeparator" parent="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05

[node name="VSeparator2" type="VSeparator" parent="BoxContainer"]
visible = false
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.03

[connection signal="pressed" from="BoxContainer/HBoxContainer/PrincipalContainer/HBoxContainer/ElementContainer/Eliminar" to="." method="_on_eliminar_pressed"]
